Carousel css deleted. Carousel pics resized. Gap between Carousel and cards fixed. More responsive.

--- a/style/style.css
+++ b/style/style.css
@@ -17,36 +17,6 @@
     width: 350px;
 }
 
-/*
-.imgUser {
-    display: flex;
-  margin-left: auto;
-  margin-right: inherit;
-    padding-left: 700px;
-    padding-top: 130px;
-*/
-/*
-    padding-top: 80px;
-    margin-left: 100px;
-    
-*/
-/*}*/
-
-/*
-.imgCart {
-    display: flex;
-      margin-left:auto;
-      margin-right: auto;
-    padding-top: 130px;
-*/
-/*
-    padding-top: 80px;
-    margin-left: 0px;
-    margin-right: 0px;
-    align-items: flex-end;
-*/
-/*}*/
-
 .imgLogo{
     padding-top: 10px;
     padding-left: 30px;
@@ -68,19 +38,9 @@
 
 
 
-/*****************Carousel***************
+/*****************Cards***************
 
-/*height of carousel neeed to be adjusted*/
-.carousel-item{
-position:relative;
-width: 100%;
-  height: 30rem;
-  margin-bottom: 10rem;
-}
 
-.img3{
-/*    height: 30rem;*/
-}
 /*cards need padding on the left*/
 .card1row{
     padding-left: 20px;
